--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
+  "name": "rna-counter",
+  "version": "0.0.0",
+  "description": "No description",
+  "author": null,
+  "private": true,
   "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject"
-  },
   "dependencies": {
-    "expo": "^31.0.2",
+    "expo": "^31.0.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
-  },
-  "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
-  },
-  "private": true
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-paper": "2.1.3"
+  }
 }
